INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR} )

SET(DIALOGS_SRCS qucssettingsdialog.cpp aboutqucs.cpp)
SET(DIALOGS_MOC_HDRS qucssettingsdialog.h aboutqucs.h)

QT4_WRAP_CPP( DIALOGS_MOC_SRCS ${DIALOGS_MOC_HDRS} )

ADD_LIBRARY(dialogs ${DIALOGS_SRCS} ${DIALOGS_MOC_SRCS} )
