INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR} )

SET(TRANSMISSION_SRCS transmissiondialog.cpp
)

SET(TRANSMISSION_MOC_HDRS transmissiondialog.h
)

SET(TRANSMISSION_UIS transmissiondialog.ui
)

QT4_WRAP_UI( TRANSMISSION_UI_HDRS ${TRANSMISSION_UIS})

QT4_WRAP_CPP( TRANSMISSION_MOC_SRCS ${TRANSMISSION_MOC_HDRS} )

ADD_LIBRARY(transmission ${TRANSMISSION_SRCS} ${TRANSMISSION_MOC_SRCS} ${TRANSMISSION_UI_HDRS})
