INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR} )

SET(ATTENUATOR_SRCS attenuator.cpp
)

SET(ATTENUATOR_MOC_HDRS attenuator.h
)

SET(ATTENUATOR_UIS attenuator.ui
)

QT5_WRAP_UI( ATTENUATOR_UI_HDRS ${ATTENUATOR_UIS})

QT5_WRAP_CPP( ATTENUATOR_MOC_SRCS ${ATTENUATOR_MOC_HDRS} )

ADD_LIBRARY(attenuator ${ATTENUATOR_SRCS} ${ATTENUATOR_MOC_SRCS} ${ATTENUATOR_UI_HDRS})
